Add RequestContent (#21320)
Added RequestContent and Updated HttpRequest to Use It